# X-ray-diffractometer-framework

./: CMakeLists.txt  README.md
ConfigurationFiles/: AlignmentSettings.ini  config.ini
cmake/: FindDP5.cmake  FindHXP.cmake  FindXIMC.cmake  RepositoryFunctions.cmake  UtilityFunctions.cmake
modules/: CMakeLists.txt  README.md
modules/Communication/: CMakeLists.txt  README.md
modules/Communication/include/: ISocket.hpp  ISocketServer.hpp
modules/Communication/include/TCP/: TCPServer.hpp  TCPSocket.hpp
modules/Communication/samples/: mainServer.cpp
modules/Communication/src/TCP/: TCPServer.cpp  TCPSocket.cpp
modules/ConfigurationFileParser/: CMakeLists.txt  README.md
modules/ConfigurationFileParser/include/: Configuration.hpp  ConfigurationMock.hpp  ConfigurationMockConfig.hpp  IConfiguration.hpp
modules/ConfigurationFileParser/samples/: SampleConfiguration.cpp
modules/ConfigurationFileParser/src/: Configuration.cpp
modules/ConfigurationFileParser/test/: CMakeLists.txt  TestConfiguration.cpp  TestReadCrystalParameters.cpp  TestReadMonochromatorParameters.cpp  TestReadXRaySourceParameters.cpp
modules/Devices/: CMakeLists.txt  README.md
modules/Devices/include/: ICrystalDeviceController.hpp  IMultiStepperDeviceController.hpp  ISingleStepperDeviceController.hpp
modules/Devices/include/Autocollimator/: Actions.hpp  AutocollimatorDeviceController.hpp  AutocollimatorStatus.hpp  Events.hpp  System.hpp
modules/Devices/include/Crystal/: Actions.hpp  CrystalDeviceController.hpp  CrystalStatus.hpp  Events.hpp  System.hpp
modules/Devices/include/DeviceFactory/: IDevicesFactory.hpp  XRayMachineDevicesFactory.hpp
modules/Devices/include/Monochromator/: Actions.hpp  Events.hpp  MonochromatorDeviceController.hpp  MonochromatorStatus.hpp  System.hpp
modules/Devices/include/Slit/: Actions.hpp  Events.hpp  SlitDeviceController.hpp  SlitStatus.hpp  System.hpp
modules/Devices/include/XRaySensor/: Actions.hpp  Events.hpp  System.hpp  XRaySensorDeviceController.hpp  XRaySensorStatus.hpp
modules/Devices/include/XRaySource/: Actions.hpp  Events.hpp  System.hpp  XRaySourceDeviceController.hpp  XRaySourceStatus.hpp
modules/Devices/samples/: fsmsample_crystal.cpp  fsmsample_xRaySource.cpp
modules/Devices/scripts/: README.md  functions.py
modules/Devices/scripts/Crystal/: ComputeFullyOpenedBeam.py  SearchCrystalBraggPeak.py  SearchCrystalWAxisAlignment.py  SearchCrystalWOffsetAxisAlignment.py  SearchCrystalXAxisAlignment.py  SearchCrystalYWAxesAlignment.py  SearchCrystalZAxisAlignment.py  SearchYAxisFineAlignment.py
modules/Devices/scripts/Crystal/Measurements/: BendingAngle.py  MiscutAngle.py  TorsionAngle.py
modules/Devices/scripts/Monochromator/: SearchMonochromatorBraggPeak.py  SearchMonochromatorLinearAlignment.py  SearchMonochromatorRotationalAlignment.py
modules/Devices/scripts/Scans/: plotScanHXP.py  plotScanStepper.py
modules/Devices/scripts/Slit/: SearchSlitLinearAlignment.py
modules/Devices/scripts/XRaySource/: SearchSourceSensorAlignment.py
modules/Devices/src/Autocollimator/: Actions.cpp  AutocollimatorDeviceController.cpp
modules/Devices/src/Crystal/: Actions.cpp  CrystalDeviceController.cpp
modules/Devices/src/DeviceFactory/: XRayMachineDevicesFactory.cpp
modules/Devices/src/Monochromator/: Actions.cpp  MonochromatorDeviceController.cpp
modules/Devices/src/Slit/: Actions.cpp  SlitDeviceController.cpp
modules/Devices/src/XRaySensor/: Actions.cpp  XRaySensorDeviceController.cpp
modules/Devices/src/XRaySource/: Actions.cpp  XRaySourceDeviceController.cpp
modules/Devices/test/: AutocollimatorDeviceTest.cpp  CMakeLists.txt  CrystalDeviceTest.cpp  MonochromatorDeviceTest.cpp  SlitDeviceTest.cpp  XRaySourceDeviceTest.cpp
modules/Motors/: CMakeLists.txt  README.md
modules/Motors/include/HXP/: HXP.hpp  HXPMock.hpp  HXPMockConfiguration.hpp  IHXP.hpp
modules/Motors/include/Steppers/: IMotor.hpp  StepperMock.hpp  StepperMockConfiguration.hpp  XIMC.hpp
modules/Motors/samples/: main.cpp
modules/Motors/src/: HXP.cpp  XIMC.cpp
modules/Motors/test/: CMakeLists.txt  MotorsTest.cpp  main.cpp
modules/PostProcessing/: CMakeLists.txt
modules/PostProcessing/include/: IPostProcessing.hpp  PostProcessing.hpp  PostProcessingMock.hpp  PostProcessingMockConfiguration.hpp
modules/PostProcessing/samples/: PostProcessing_Sample.cpp
modules/PostProcessing/src/: PostProcessing.cpp
modules/Scan/: CMakeLists.txt  README.md
modules/Scan/include/: IScanning.hpp  ScanningHXP.hpp  ScanningHXPMock.hpp  ScanningHXPMockConfiguration.hpp  ScanningStepper.hpp  ScanningStepperMock.hpp  ScanningStepperMockConfiguration.hpp
modules/Scan/src/: ScanningHXP.cpp  ScanningStepper.cpp
modules/Sensors/: CMakeLists.txt  README.md
modules/Sensors/include/: ISensors.hpp  Sensors.hpp  SensorsMock.hpp  SensorsMockConfiguration.hpp
modules/Sensors/samples/: sensorsSample.cpp
modules/Sensors/src/: Sensors.cpp
modules/Template/: CMakeLists.txt
modules/Template/include/Template/: Hello.hpp
modules/Template/samples/: HelloSample.cpp
modules/Template/src/: Hello.cpp
modules/Template/test/: CMakeLists.txt  ExampleTests.cpp
modules/UIManagementServer/: CMakeLists.txt  README.md
modules/UIManagementServer/include/: IUIManagementServer.hpp  UIManagementServer.hpp
modules/UIManagementServer/samples/: gui_test.cpp
modules/UIManagementServer/src/: UIManagementServer.cpp
modules/XRaySensor/: CMakeLists.txt  README.md
modules/XRaySensor/include/: IXraySensor.hpp  XRaySensor.hpp  XRaySensorMock.hpp  XRaySensorMockConfiguration.hpp
modules/XRaySensor/samples/: XRaySensorSample.cpp
modules/XRaySensor/src/: XRaySensor.cpp
modules/XRaySensor/test/: CMakeLists.txt  main.cpp
scripts/: Doxyfile  lintscript.sh
